--- a/package.json
+++ b/package.json
@@ -14,6 +14,30 @@
         "resources": {
             "media": [
                 {
+                    "file": "fonts/BoldFont",
+                    "name": "FONT_BOLDFONT_32",
+                    "targetPlatforms": null,
+                    "type": "font"
+                },
+                {
+                    "file": "images/WatchFaceOne ",
+                    "name": "IMAGE_FACEONE",
+                    "targetPlatforms": null,
+                    "type": "bitmap"
+                },
+                {
+                    "file": "images/WatchFaceTwo",
+                    "name": "IMAGE_FACETWO",
+                    "targetPlatforms": null,
+                    "type": "bitmap"
+                },
+                {
+                    "file": "images/WatchFaceThree",
+                    "name": "IMAGE_FACETHREE",
+                    "targetPlatforms": null,
+                    "type": "bitmap"
+                },
+                {
                     "file": "images/HappyImage",
                     "name": "IMAGE_HAPPY",
                     "targetPlatforms": null,
