Include all the tamagotchi

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "name": "pebble",
     "pebble": {
         "capabilities": [
-            "health"
+            ""
         ],
         "displayName": "Pebble",
         "enableMultiJS": false,
@@ -14,40 +14,64 @@
         "resources": {
             "media": [
                 {
+                    "file": "images/WatchFace2",
+                    "name": "IMAGE_FACE2",
+                    "targetPlatforms": null,
+                    "type": "bitmap"
+                },
+                {
                     "file": "fonts/BoldFont",
                     "name": "FONT_BOLDFONT_32",
                     "targetPlatforms": null,
                     "type": "font"
                 },
                 {
-                    "file": "images/WatchFaceOne ",
-                    "name": "IMAGE_FACEONE",
+                    "file": "fonts/ChampagneFont",
+                    "name": "FONT_CHAMPAGNE_32",
+                    "targetPlatforms": null,
+                    "type": "font"
+                },
+                {
+                    "file": "images/WatchFace1",
+                    "name": "IMAGE_FACE1",
                     "targetPlatforms": null,
                     "type": "bitmap"
                 },
                 {
-                    "file": "images/WatchFaceTwo",
-                    "name": "IMAGE_FACETWO",
+                    "file": "fonts/SheepingDogsFont",
+                    "name": "FONT_SHEEPINGDOG_32",
+                    "targetPlatforms": null,
+                    "type": "font"
+                },
+                {
+                    "file": "fonts/SheepingDogsFont",
+                    "name": "FONT_SHEEPINGDOG_42",
+                    "targetPlatforms": null,
+                    "type": "font"
+                },
+                {
+                    "file": "images/FaintFace",
+                    "name": "IMAGE_FAINT",
                     "targetPlatforms": null,
                     "type": "bitmap"
                 },
                 {
-                    "file": "images/WatchFaceThree",
-                    "name": "IMAGE_FACETHREE",
+                    "file": "images/AngryFace",
+                    "name": "IMAGE_ANGRY",
                     "targetPlatforms": null,
                     "type": "bitmap"
                 },
                 {
-                    "file": "images/HappyImage",
+                    "file": "images/MediumFace",
+                    "name": "IMAGE_MEDIUM",
+                    "targetPlatforms": null,
+                    "type": "bitmap"
+                },
+                {
+                    "file": "images/HappyFace",
                     "name": "IMAGE_HAPPY",
                     "targetPlatforms": null,
                     "type": "bitmap"
-                },
-                {
-                    "file": "fonts/AvertaFont",
-                    "name": "FONT_AVERTA_24",
-                    "targetPlatforms": null,
-                    "type": "font"
                 },
                 {
                     "file": "fonts/AvertaFont",
@@ -71,7 +95,7 @@
         ],
         "uuid": "20af7989-767d-4060-9fa6-f9c63b941882",
         "watchapp": {
-            "watchface": false
+            "watchface": true
         }
     },
     "version": "1.0.0"
